# polymorphic-list

./: .clang_complete  .gitmodules  .travis.yml  CMakeLists.txt  README.md
bench/: main.cpp  plist.cpp
include/plist/: detail.hpp  plist.hpp
test/: main.spec.cpp  plist.spec.cpp  utils.hpp
